--- a/scss/components/_mastpanel.scss
+++ b/scss/components/_mastpanel.scss
@@ -8,6 +8,7 @@
             width: 45% !important;
             padding-left: 10%;
             padding-right: 5%;
+            margin-bottom: -20px;
             .mastpanel-item {
                 margin: 0px !important;
                 .mastpanel-item-overlay {
