--- a/scss/base/_code.scss
+++ b/scss/base/_code.scss
@@ -48,7 +48,7 @@ pre {
     border-color: #00b4f2;
     border-radius: 5px;
     /* background-color: #0f0f0f; */
-    padding: 1px;
+    padding: 0px 3px 0px 3px;
 }
 
 .hl-bg-source {
@@ -56,5 +56,5 @@ pre {
     border-color: gray;
     border-radius: 5px 5px 5px 5px;
     /* background-color: #0f0f0f; */
-    padding: 1px;
+    padding: 0px 3px 0px 3px;
 }
