--- a/scss/base/_code.scss
+++ b/scss/base/_code.scss
@@ -1,4 +1,5 @@
 .lead {
+    font-weight: 400;
     font-size: 1.2rem;
     font-family: 'Source Sans Pro'
 }
@@ -8,7 +9,7 @@ code {
 }
 
 p {
-    color: #ddd;
+    color: #e8e8e8;
 }
 
 pre {
