--- a/scss/freelancer.scss
+++ b/scss/freelancer.scss
@@ -22,5 +22,7 @@
 @import "layout/footer.scss";
 
 html, body {
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
     height: 100%;
 }
