--- a/scss/freelancer.scss
+++ b/scss/freelancer.scss
@@ -22,6 +22,7 @@
 @import "layout/footer.scss";
 
 html, body {
+    background-color: #0f0f0f;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
     height: 100%;
